Added timeout middleware
