# docs/swagger.json
@@ -46,6 +46,12 @@
                             "$ref": "#/definitions/file_info.HttpResponseErr"
                         }
                     },
+                    "408": {
+                        "description": "Request Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/file_info.HttpResponseErr"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
